# livespec-orchestrator-beads-fabro

./: .copier-answers.yml  .gitignore  .livespec.jsonc  .mise.toml  .release-please-manifest.json  .vendor.jsonc  AGENTS.md  CHANGELOG.md  NOTICES  README.md  justfile  lefthook.yml  pyproject.toml  release-please-config.json
.agents/plugins/: marketplace.json
.ai/: cross-tenant-execution-mirror.md
.beads/: .gitignore  config.yaml
.claude/: settings.json
.claude-plugin/: api-configurable-keys.json  marketplace.json  plugin.json
.claude-plugin/.codex-plugin/: plugin.json
.claude-plugin/hooks/: CLAUDE.md  codex_yolo_gate.py  codex_yolo_reapply.py  hooks.json
.claude-plugin/prose/: capture-impl-gaps.md  capture-spec-drift.md  capture-work-item.md  groom.md  implement.md  plan.md
.claude-plugin/scripts/: CLAUDE.md
.claude/hooks/: CLAUDE.md  beads-access-guard.sh  beads_access_guard.py  codex-yolo-reapply.sh  codex_yolo_gate.py  codex_yolo_reapply.py  livespec_footgun_guard.py
.github/scripts/: export-ci-telemetry.sh
.github/workflows/: acceptance-live-golden-master.yml  auto-enable-merge.yml  auto-update-branches.yml  bump-pin-from-dispatch.yml  ci.yml  copier-update-drift.yml  (+2 more)
SPECIFICATION/: README.md  constraints.md  contracts.md  scenarios.md  spec.md
acceptance/: test_beads_fabro_golden_master.py  test_beads_fabro_live_golden_master.py
bd-guard/: README.md  bd-guard-emit.py  bd-guard.sh  install.sh  rollback.sh
dev-tooling/: CLAUDE.md  git-hook-wrapper.sh  livespec-commit-refuse-hook.sh  worktree-hydrate.sh
loop-reflection-gate/: CLAUDE.md
orchestrator-image/: .dockerignore  Dockerfile  README.md  acceptance-live-golden-master.sh  build-and-verify.sh  orchestrator-entrypoint.sh  real-work-dispatch.sh  reap-e2e-repos.sh  tier2-dispatch-proof.sh
orchestrator-image/e2e-skeleton/: .livespec.jsonc  .mise.toml  CLAUDE.md  justfile  lefthook.yml  pyproject.toml
orchestrator-image/e2e-skeleton/SPECIFICATION/: contracts.md  scenarios.md  spec.md
orchestrator-image/e2e-skeleton/dev-tooling/: skeleton-passthrough-hook.sh
orchestrator-image/e2e-skeleton/src/greeting/: __init__.py
orchestrator-image/e2e-skeleton/tests/: test_skeleton_sanity.py
research/: CLAUDE.md
tests/: CLAUDE.md  conftest.py  heading-coverage.json  test_fleet_pat_dispatch_surface.py  test_fleet_pat_dispatch_surface_helpers.py  test_phase1_mechanical_coverage.py
(+836 files in other folders)
